# request-generator-backend

./: .env  .env.development  .env.local  .gitignore  README.md  docker-compose.yml  init.sql
.github/workflows/: django-tests.yml  tests.yml
app/: manage.py  pyproject.toml  requirements.txt
app/common/: exceptions.py  views.py
app/order/: admin.py  constants.py  models.py  permissions.py  tests.py  urls.py  validation.py  views.py
app/order/migrations/: 0001_initial.py  0002_order_request_data.py
app/order/serializers/: dv.py  order.py  ov.py
app/order/services/: certificate.py  request.py
app/person/: admin.py  constants.py  models.py  services.py  tests.py  urls.py  views.py
app/person/migrations/: 0001_initial.py
app/request_generator/: __init__.py  environ.py  urls.py  wsgi.py
app/request_generator/settings/: __init__.py  base.py  database.py  rest.py
app/stock/: admin.py  constants.py  models.py  serializers.py  tests.py  urls.py  views.py
app/stock/migrations/: 0001_initial.py  0002_stock_type_alter_stock_description_and_more.py  0003_alter_stock_type.py  0004_alter_stock_type.py
app/templates/admin/: change_list.html
docker/: Dockerfile
