[tool.poetry]
name = "request_generator"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "==4.0.6"
djangorestframework = "==3.13.1"
dj-rest-auth = "==2.2.4"
django-cors-headers = "==3.11.0"
django-environ = "==0.9.0"
django-filter = "==21.1"
cryptography = "==37.0.4"
asgiref = "==3.5.2"
cffi = "==1.15.1"
psycopg2-binary = "==2.9.3"
pycparser = "==2.21"
pytz = "==2022.1"
sqlparse = "==0.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
